[gd_scene load_steps=2 format=3 uid="uid://b8xfqm2tao2bk"]

[ext_resource type="Script" uid="uid://bp1ovyo3fv7ed" path="res://Scripts/level_1.gd" id="1_2llne"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_2llne")
targetAmount = 1
targetVariance = 600

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -567.0
offset_top = -316.0
offset_right = -336.0
offset_bottom = -268.0
max_value = 10.0
show_percentage = false

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Targets" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="targetSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="targetSpawnTimer" to="." method="_on_target_spawn_timer_timeout"]
